cmake_minimum_required(VERSION 3.26)
project(ExampleOfCPL C)

set(CMAKE_C_STANDARD 17)

add_subdirectory(0-intro)
add_subdirectory(1-types-io)
add_subdirectory(2-if-for-array)
add_subdirectory(3-For-A-While)
add_subdirectory(4-loops)
add_subdirectory(6-Recursion)
add_subdirectory(7-data-types)
add_subdirectory(8-pointers-and-arrays)
add_subdirectory(9-pointers-and-Cstrings)
add_subdirectory(10-double-pointers)
add_subdirectory(11-function-pointers)
add_subdirectory(12-struct)
add_subdirectory(13-linked-list)